--- a/tutorial_TeX/RB_TotalEvidenceDating_FBD_Tutorial/RB_TotalEvidenceDating_FBD_Tutorial_content.tex
+++ b/tutorial_TeX/RB_TotalEvidenceDating_FBD_Tutorial/RB_TotalEvidenceDating_FBD_Tutorial_content.tex
@@ -152,7 +152,7 @@ In order for all the taxa to appear on the same tree, they all need to be part o
 
 \subsection{Specify monophyletic clade constraints}
 
-RevBayes allows researchers to use clade constraints to put a zero probability on trees not containing certain clades. In our case, Ursinae (brown bears, black bears and sloth bears) and Ailuropodinae (pandas and their close relatives) are both very well supported subfamilies. We will add constraints for these two groups.
+RevBayes allows researchers to use clade constraints to put a zero probability on trees not containing certain clades. In our case, Ursinae (brown bears, black bears and sloth bears) and Ailuropodinae (pandas and their close relatives) are both very well supported subfamilies. We will add constraints for these two groups. We will also define a constraint for the extant bears, though we will not use it until section 4.5.
 
 {\tt \begin{snugshade*}
 \begin{lstlisting}
@@ -162,6 +162,9 @@ clade_ursinae = clade("Melursus_ursinus", "Ursus_arctos", "Ursus_maritimus",
 clade_pandas = clade("Ailuropoda_melanoleuca", "Indarctos_vireti", "Indarctos_arctoides", 
                      "Indarctos_punjabiensis", "Ailurarctos_lufengensis", "Agriarctos_spp", 
                      "Kretzoiarctos_beatrix")
+clade_extant = clade("Ailuropoda_melanoleuca","Tremarctos_ornatus","Melursus_ursinus",
+                    "Ursus_arctos","Ursus_maritimus","Helarctos_malayanus",
+                    "Ursus_americanus","Ursus_thibetanus")
 constraints = v(clade_pandas, clade_ursinae)
 \end{lstlisting}
 \end{snugshade*}}
@@ -177,6 +180,10 @@ Now that our data are loaded and prepared, we can specify the Fossilized Birth-D
 mvi = 1
 \end{lstlisting}
 \end{snugshade*}}
+
+\bigskip
+
+\subsection{Specify the fossilized birth-death process}
 
 Two key parameters of the FBD process are the birth rate (the rate at which lineages are added to the tree) and the death rate (the rate at which lineages are removed from the tree). We'll place exponential priors on both of these values. An exponential prior with a $\lambda$ =  10 places a higher probability on values less than 0.4 for these parameters. 
 
@@ -206,6 +213,61 @@ In order to print nodes in our graph to output (also called \cl{monitoring}), we
 \begin{lstlisting}
 diversification := birth_rate - death_rate
 turnover := death_rate/birth_rate
+\end{lstlisting}
+\end{snugshade*}}
+
+All extant bears are represented in this dataset. Therefore, we can fix the sampling probability of extant lineages to 1.
+
+{\tt \begin{snugshade*}
+\begin{lstlisting}
+rho <- 1.0
+\end{lstlisting}
+\end{snugshade*}}
+
+The rate of sampling fossils ($\psi$), on the other hand is not known. We will use an exponential prior on this parameter as well, and use a slide move to sample values from our distribution.
+
+{\tt \begin{snugshade*}
+\begin{lstlisting}
+psi ~ dnExponential(10) 
+moves[mvi++] = mvScale(birth_rate, lambda=0.01, weight=3.0)
+moves[mvi++] = mvScale(birth_rate, lambda=0.1, weight=3.0)
+moves[mvi++] = mvScale(birth_rate, lambda=1.0, weight=3.0)
+\end{lstlisting}
+\end{snugshade*}}
+
+The fossilized birth-death is conditioned on the age of the origin, or the start of the process. We will specify a uniform distribution on the age of the origin. If you looked in the bears taxa file, you might notice that the age of the oldest fossil is slightly younger than the upper bound of the uniform distribution on the origin age. For this parameter, we will use a sliding window move. A sliding window move samples within an interval (defined by delta) . Sliding window moves can be tricky for small values, as the window may overlap zero. However, for parameters such as the origin, there is little risk of this being an issue.
+
+{\tt \begin{snugshade*}
+\begin{lstlisting}
+origin_time ~ dnUnif(37.0, 55.0)
+moves[mvi++] = mvSlide(origin_time, delta=0.01, weight=10.0)
+moves[mvi++] = mvSlide(origin_time, delta=0.1, weight=10.0)
+moves[mvi++] = mvSlide(origin_time, delta=1, weight=10.0)
+\end{lstlisting}
+\end{snugshade*}}
+
+All the components of the FBD process are now defined. The next step is to combine these parameters to define the tree prior as the FBD.
+
+{\tt \begin{snugshade*}
+\begin{lstlisting}
+tree_prior = dnFBDP(origin=origin_time, lambda=birth_rate, mu=death_rate, psi=psi, rho=rho, taxa=taxa)
+\end{lstlisting}
+\end{snugshade*}}
+
+Next, we will define the fbd\_tree variable as a random variable. It will be used to generate trees under the FBD process that conform to our clade constraints. 
+
+{\tt \begin{snugshade*}
+\begin{lstlisting}
+fbd_tree ~ dnConstrainedTopology(tree_prior, constraints) 
+\end{lstlisting}
+\end{snugshade*}}
+
+Finally, we can also add monitors for other quantities we might be interested in estimating. Below, we will define a monitor that prints the number of fossils that are inferred to be 'sampled ancestors' - lineages that are present in the phylogeny, and have descendents present on the tree. We will also define a monitor that prints the age of the crown group of bears, using the previously-defined extant bear constraint.
+
+{\tt \begin{snugshade*}
+\begin{lstlisting}
+sa := fbd_tree.numSampledAncestors();
+crown := tmrca(fbd_tree, clade_extant)
 \end{lstlisting}
 \end{snugshade*}}
 
