--- a/tutorial_TeX/RB_TotalEvidenceDating_FBD_Tutorial/RB_TotalEvidenceDating_FBD_Tutorial_content.tex
+++ b/tutorial_TeX/RB_TotalEvidenceDating_FBD_Tutorial/RB_TotalEvidenceDating_FBD_Tutorial_content.tex
@@ -230,7 +230,7 @@ moves[mvi++] = mvScale(death_rate, delta=1, weight=3.0)
 \end{lstlisting}
 \end{snugshade*}}
 
-In order to print nodes in our graph to output (also called \cl{monitoring}), we need to create deterministic nodes for birth and death. Deterministic nodes are often value transformations between existing stochastic nodes. So we will define diversification and turnover as deterministic nodes.
+In order to print nodes in our graph to output (also called \textit{monitoring}), we need to create deterministic nodes for the diversification and turnover. Deterministic nodes are value transformations between existing stochastic nodes. So we will define diversification and turnover as deterministic nodes.
 
 {\tt \begin{snugshade*}
 \begin{lstlisting}
@@ -258,7 +258,7 @@ moves[mvi++] = mvScale(birth_rate, lambda=1.0, weight=3.0)
 \end{lstlisting}
 \end{snugshade*}}
 
-The fossilized birth-death is conditioned on the age of the origin, or the start of the process. We will specify a uniform distribution on the age of the origin. If you looked in the bears taxa file, you might notice that the age of the oldest fossil is slightly younger than the upper bound of the uniform distribution on the origin age. For this parameter, we will use a sliding window move. A sliding window move samples within an interval (defined by delta) . Sliding window moves can be tricky for small values, as the window may overlap zero. However, for parameters such as the origin, there is little risk of this being an issue.
+Under the FBD model, the process is conditioned on the age of the origin, or the start of the process. We will specify a uniform distribution on the age of the origin. If you looked in the bears taxa file, you might notice that the age of the oldest fossil is slightly younger than the upper bound of the uniform distribution on the origin age. For this parameter, we will use a sliding window move. A sliding window move samples within an interval (defined by delta) . Sliding window moves can be tricky for small values, as the window may overlap zero. However, for parameters such as the origin, there is little risk of this being an issue.
 
 {\tt \begin{snugshade*}
 \begin{lstlisting}
